# sudoku

./: dune-project  sudoku.opam
assets/: bigboard-example.txt  bigboard.txt  board1.txt  board2.txt  board3.txt
lib/: board.ml  board.mli  dune  int_set.ml  solver.ml  sudoku.ml  sudoku.mli
test/: dune
